# leptos-vite-template

./: .env  .env.development  .env.github  .env.production  .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  README.zh-Hans.md  SETUP.md  TREE_SHAKING_GUIDE.md  index.html  main.ts  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
.github/workflows/: deploy.yml  release.yml
docs/: deployment.md  usage.md
plugins/: vite-plugin-wasm-import.ts
public/: 404.html
scripts/: build-all.js  build-wasm.js  env-loader.js  test-workflow.js  verify-build.js
src/: env.rs  lib.rs
src/assets/: styles.css
src/bindings/: mdui.rs  mod.rs
src/components/: callback_test.rs  mdui_components.rs  mod.rs  search_box.rs  smart_button.rs  todo_list.rs  user_card.rs
src/pages/: complex_props_demo.rs  home.rs  mdui_demo.rs  mdui_js_api_demo.rs  mod.rs
src/plugins/: mdui.ts
